--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bulma": "^0.6.1",
     "faker": "^4.1.0",
     "vue": "^2.5.2",
+    "vuex": "^3.0.1",
     "yargs": "^10.0.3"
   },
   "devDependencies": {
